env-vars/main/default/objects/ENV__mdt/ENV__mdt.object-meta.xml
<CustomObject>
    <description>Represents a generic ENV var, with a basic KEY=Value structure</description>
    <label>ENV Var</label>
    <pluralLabel>ENV Vars</pluralLabel>
</CustomObject>