env-vars/main/default/objects/ENV__mdt/fields/Json_Schema__c.field-meta.xml
<CustomField>
    <fullName>Json_Schema__c</fullName>
    <description>The JSON schema to apply validations with if using ANY JSON. Only works in custom UI</description>
    <inlineHelpText>The JSON schema to apply validations with if using ANY JSON. Only works in custom UI</inlineHelpText>
    <label>Json Schema</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>