env-vars/main/default/objects/ENV__mdt/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Describe how this setting is used, where it&#39;s used and any notes about how to enter the values</description>
    <inlineHelpText>Describe how this setting is used, where it&#39;s used and any notes about how to enter the values</inlineHelpText>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>