env-vars/main/default/objects/ENV__mdt/fields/Secret__c.field-meta.xml
<CustomField>
    <fullName>Secret__c</fullName>
    <description>Checked if encrypted by env-vars-encrypt</description>
    <inlineHelpText>Checked if encrypted by env-vars-encrypt</inlineHelpText>
    <defaultValue>false</defaultValue>
    <label>Secret</label>
    <type>Checkbox</type>
</CustomField>