env-vars/main/default/objects/ENV__mdt/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>The value of this var</description>
    <inlineHelpText>The value of this var</inlineHelpText>
    <label>Value</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>